--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-20G37T53KN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-20G37T53KN');
+</script>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
